Fix can't select option as scoreboard overlapping

--- a/src/main/resources/static/css/play.css
+++ b/src/main/resources/static/css/play.css
@@ -14,6 +14,15 @@
 
 .sub-container {
     padding: 1rem 0;
+    border-radius: 5px 5px 0 0;
+}
+
+.main {
+    border-radius:  0 0 5px 5px;
+}
+
+.container .sub-container {
+    margin: 0;
 }
 
 #result-info {
