--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -251,6 +251,8 @@ ul {
     justify-content: space-between;
     align-items: center;
 
+    z-index: 1;
+
     height: 2rem;
 
     border: 2px darkslateblue solid;
@@ -387,6 +389,7 @@ ul {
 }
 
 .logo-pos-tr {
+    z-index: 1;
     width: 17rem;
     position: absolute;
     top: 1rem;
